# small-projects

./: README.md
agent/: README.md  application.c  application.h  entity.h  gef.c  gef.h  main.c  makefile  menu.c  menu.h  util.c  util.h  world.c  world.h
agent/rules/: predator_prey.c  predator_prey.h  traffic_jam.c  traffic_jam.h  wolfram.c  wolfram.h
clichess/: build.sh  main.c
colouring/: Cargo.toml
colouring/src/: README.md  main.rs
island/: application.c  application.h  island  main.c  makefile
island3d/: .gitignore  camera.cpp  camera.h  dankgl.cpp  dankgl.h  dankmath.cpp  dankmath.h  file_util.cpp  file_util.h  generation.cpp  generation.h  hash.cpp  hash.h  main.cpp  makefile  mesh.h  pnc.vert  pnc_vertex.h  vla.h
krand/: Cargo.toml  README.md
krand/src/: image_output.rs  main.rs  noise.rs
memesweeper/: .gitignore  README.md  atlas.xcf  game.c  game.h  gef.c  gef.h  grid.h  main.c  makefile  util.c
minifb-gol/: Cargo.toml  README.md
minifb-gol-demo/: Cargo.toml  README.md
minifb-rps/: Cargo.toml  README.md
noise-toy/: README.md  gef.c  gef.h  main.c  makefile  mymath.c  mymath.h  nxplore
particle/: build.sh  main.c
regex/: main.c
synth2/: README.md  a.out  application.c  application.h  aud.c  aud.h  gef.c  gef.h  main.c  makefile  module.c  module.h  rand.c  rand.h  test_points_on_lines.c  util.c  util.h
tree/: README.md  camera3p.c  camera3p.h  main.c  makefile  menu.c  menu.h  mymath.c  mymath.h  proc_tree.c  proc_tree.h  tree.frag  tree.vert  util.c  util.h
zlang/: .gitignore  main.cpp  makefile  re.cpp  test  vla.hpp
(+25 files in other folders)
