[package]
name = "krand"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
statrs = "0.15.0"
rand = "0.8.4"
png = "0.17.1"
num = "0.4.0"
palette = "0.2.1"

simdnoise = "3.1.6"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }

crossbeam = "0.8.1"